@@ -718,6 +718,9 @@ Release 0.23.3 - UNRELEASED
     MAPREDUCE-4449. Incorrect MR_HISTORY_STORAGE property name in JHAdminConfig
     (Ahmed Radwan via bobby)
 
+    MAPREDUCE-4283. Display tail of aggregated logs by default (Jason Lowe via
+    bobby)
+
 Release 0.23.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
